@@ -337,6 +337,12 @@ namespace KJS {
     CompatMode compatMode() const;
 
     /**
+     * Run the garbage collection. Returns true when at least one object
+     * was collected; false otherwise.
+     */
+    static bool collect();
+
+    /**
      * Called by InterpreterImp during the mark phase of the garbage collector
      * Default implementation does nothing, this exist for classes that reimplement Interpreter.
      */
